# MyMud_claude_single

./: .gitignore  CLAUDE.md  DEBT_ALL_IN_ONE.md  DEBT_IMPLEMENTATION_PLAN.md  DEVELOPMENT_PLAN.md  MIGRATION_LOG.md  Makefile  README.md  TECHNICAL_DEBT.md  TECHNICAL_DEBT_DETAILED.md  TEST_REPORT.md  TODO.md  WORKFLOW.md  kimi-cli.yaml  pyproject.toml  test_data_compat.py  单机版金庸武侠文字MUD技术实现与游戏设计研究.md
.agents/: AGENTS.md
.agents/skills/mud-master/: SKILL.md
.agents/skills/mud_architect/: SKILL.md
.agents/skills/mud_coder/: SKILL.md
.agents/skills/mud_reviewer/: SKILL.md
.claude/: settings.local.json
benchmarks/: __init__.py  test_core_performance.py
data/: balance.yml  jinyong_mud.db-shm  jinyong_mud.db-wal
docs/: DEMO.md  FINAL_COMPREHENSIVE_REVIEW_2026-03-17.md  GUI_GUIDE.md  PHASE5_PHASE6_TASKS.md  README.md  code_review_fix_log.md  code_review_report.md  comprehensive_code_review_2026-03-17.md  comprehensive_review_fix_log.md  comprehensive_review_report.md  devlog_2026-03-17.md  gui_blackscreen_fix.md  performance_optimization_design.md  performance_optimizations.md  phase4_backlog_summary.md  phase4_complete_report.md  phase4_gui_complete.md  quick_fixes_2026-03-17.md  tech_debt_report.md  test_refactoring_summary.md  test_suite_analysis.md  test_suite_fix_log.md  单机MUD MUDLIB导入与配置完全指南.md
docs/api/: core_api.md  game_api.md
docs/architecture/: ARCHITECTURE_ANALYSIS.md  ARCHITECTURE_DEBT.md  ARCHITECTURE_DEBT_COMPLETE.md  ARCHITECTURE_DEBT_EXECUTION.md  PERFORMANCE_MONITORING_DESIGN.md  data_flow.md  migration_roadmap_a_to_b.md  name_attribute_migration_plan.md  overview.md  tech_debt_analysis.md
docs/architecture/archive/: ARCHITECTURE_DEBT_CHECKLIST.md  ARCHITECTURE_DEBT_EXECUTION.md  ARCHITECTURE_DEBT_ROADMAP.md  DEBT_MASTER_PLAN.md
docs/content_system/: 03_hot_reload.md
docs/converter/: 02_converter_design.md
docs/guides/: coding_standards.md  quickstart.md
docs/specs/: current_project_spec.md  phase4_gui_spec.md  phase4_gui_task_list.md
docs/standards/: mixin_naming.md
docs/xkx100_analysis/: 00_overview.md  01_file_formats.md
scripts/: __init__.py  setup_venv.ps1
src/: __init__.py
src/engine/: __init__.py
src/engine/commands/: __init__.py  cmdset.py  command.py  default.py  handler.py
src/engine/components/: __init__.py
src/engine/core/: __init__.py  engine.py  messages.py  typeclass.py
src/engine/database/: __init__.py  connection.py  models.py
src/engine/events/: __init__.py  (+3 more)
src/game/: __init__.py  interfaces.py
src/gui/: __init__.py  main_window.py
src/utils/: __init__.py  config.py  config_loader.py  exceptions.py  lock_parser.py  logging.py  validators.py
tests/: __init__.py  base.py  conftest.py
tests/integration/: __init__.py  test_api_chaos.py  test_architecture_improvements.py  test_chaos_architecture.py  test_chaos_name_attributes.py  test_chaos_player_behavior.py  test_chaos_recovery.py  test_comprehensive_gameplay.py  test_concurrent_multiplayer.py  test_cross_phase_integration.py  test_data_migration.py  test_edge_case_explosion.py  test_edge_cases_advanced.py  test_engine.py  test_exit_lock_integration.py  test_gui_integration.py  test_name_attribute_integration.py  test_name_display_commands.py  test_name_edge_cases.py  test_npc_integration.py  test_performance_stress.py  test_phase2_game_systems.py  test_player_journey.py  test_player_journey_simple.py  test_randomized.py  test_security_input.py
tests/unit/: __init__.py  test_animations.py  test_behavior_tree.py  test_buff.py  test_buff_coverage.py  test_carry_weight.py  test_character.py  test_combat.py  test_combat_actions.py  test_combat_ai.py  test_combat_ai_coverage.py  test_combat_calculator.py  test_combat_calculator_coverage.py  test_combat_core.py  test_combat_core_coverage.py  test_combat_execution.py  test_combat_improvements.py  test_combat_loop.py  test_combat_strategy.py  test_combat_transaction.py  test_command_lock.py  test_commands.py  test_components.py  test_config.py  test_config_coverage.py  test_config_loader.py  test_database.py  test_debug_commands.py  test_default_commands.py  test_dialogue.py  test_dialogue_advanced.py  test_dialogue_core.py  test_dialogue_system.py  test_dynamic_cmdset.py  test_engine_core.py  test_equipment.py  test_exit_lock.py  test_gui_features.py  test_gui_smoke.py  test_item.py  (+36 more)
tools/: __init__.py  dev.py
(+93 files in other folders)
