[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "jinyong-mud"
version = "0.1.0"
description = "单机版金庸武侠文字MUD游戏引擎"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "JinYong MUD Team", email = "dev@jinyong-mud.local" },
]
keywords = ["mud", "game", "wuxia", "text-adventure", "jinyong"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Games/Entertainment :: Role-Playing",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]
requires-python = ">=3.11"
dependencies = [
    "SQLAlchemy[asyncio]>=2.0.0",
    "aiosqlite>=0.19.0",
    "PySide6>=6.6.0",
    "qasync>=0.27.0",
    "msgpack>=1.0.0",
    "jieba>=0.42.0",
    "alembic>=1.13.0",
    "pyyaml>=6.0",
    "watchdog>=3.0.0",
    "typing-extensions>=4.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.7.0",
    "pre-commit>=3.5.0",
    "types-PyYAML>=6.0",
    "types-msgpack>=0.2.0",
]

[project.scripts]
jinyong-mud = "src.gui.main_window:main"
jy-dev = "tools.dev:main"

[project.urls]
Homepage = "https://github.com/jinyong-mud/jinyong-mud"
Documentation = "https://docs.jinyong-mud.local"
Repository = "https://github.com/jinyong-mud/jinyong-mud"
Issues = "https://github.com/jinyong-mud/jinyong-mud/issues"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.black]
line-length = 100
target-version = ["py311", "py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | migrations
)/
'''

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "D",   # pydocstyle
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
]
ignore = [
    "D100",  # Missing docstring in public module
    "D104",  # Missing docstring in public package
    "D107",  # Missing docstring in __init__
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "ARG"]
"tools/**/*" = ["D"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
namespace_packages = true
explicit_package_bases = true

[[tool.mypy.overrides]]
module = [
    "jieba.*",
    "msgpack.*",
    "qasync.*",
    "watchdog.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "7.4"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow tests",
    "chaos: Chaos tests",
    "api_chaos: API chaos tests",
    "player_behavior: Player behavior tests",
    "recovery: Recovery tests",
    "concurrent: Concurrent tests",
    "multiplayer: Multiplayer tests",
    "migration: Data migration tests",
    "boundaries: Boundary tests",
    "randomized: Randomized tests",
    "security: Security tests",
]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/test_*",
    "tools/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]
